@@ -212,6 +212,7 @@ enum EMUCMD
 	EMUCMD_CLOSEROM,
 	//-----------------------------
 	EMUCMD_MISC_DISPLAY_MOVIESUBTITLES,
+	EMUCMD_MISC_UNDOREDOSAVESTATE,
 	EMUCMD_MAX
 };
 
